rust/geometry/tests/snapshots/annex_e__mapped__with-transformation.snap
---
source: rust/geometry/tests/geometry_correctness_harness.rs
description: tests/models/buildingsmart/annex_e/mapped-geometric-shape/mapped-shape-with-transformation.ifc
---
parse_ok: true
products_attempted: 5
products_non_empty: 1
process_errors: 4
total_triangles: 12
total_vertices: 24
spike_triangles: 0
total_surface_area: 4.500
bbox_min: [0.646, -0.354, 0.000]
bbox_max: [1.354, 0.354, 2.000]
types_seen:
  IFCBUILDINGELEMENTPROXY: 1
